# connectedhomeip-1

./: .gitmodules  BUILD.gn
.github/workflows/: docker_img.yaml  examples-bl602.yaml
build_overrides/: bl702_sdk.gni
config/bouffalolab/bl702/: BUILD.gn  with_pw_rpc.gni
config/bouffalolab/bl702/include/: CHIPProjectConfig.h  board.h
config/bouffalolab/bl702/lib/pw_rpc/: BUILD.gn  pw_rpc.gni
config/bouffalolab/bl702/src/: AppTask.cpp
config/bouffalolab/bl702/toolchain/: BUILD.gn
examples/build_overrides/: bl702_sdk.gni
examples/lighting-app/bouffalolab/bl602/: BUILD.gn  README.md  with_pw_rpc.gni
examples/lighting-app/bouffalolab/bl602/include/: AppTask.h  CHIPProjectConfig.h
examples/lighting-app/bouffalolab/bl602/src/: AppTask.cpp  LEDWidget.cpp  main.cpp
examples/lighting-app/bouffalolab/bl702/: .gn  BUILD.gn  README.md  args.gni
examples/lighting-app/bouffalolab/bl702/include/: AppConfig.h  AppTask.h  CHIPProjectConfig.h  FreeRTOSConfig.h  board.h
examples/lighting-app/bouffalolab/bl702/src/: AppTask.cpp  ZclCallbacks.cpp  main.cpp
examples/platform/bouffalolab/bl602/: InitPlatform.cpp  PigweedLogger.cpp  Rpc.cpp  uart.c
examples/platform/bouffalolab/bl602/ldscripts/: flash_rom.ld
examples/platform/bouffalolab/bl702/: BUILD.gn  LEDWidget.cpp  LEDWidget.h  MemMonitoring.cpp  OTAConfig.cpp  PigweedLogger.cpp  demo_pwm.c  demo_pwm.h  uart.c
examples/platform/bouffalolab/bl702/ldscripts/: flash.ld  psram_flash.ld  psram_flash_wifi.ld
examples/platform/bouffalolab/bl702/partitions/: partition_cfg_2M_psm.toml
examples/platform/bouffalolab/bl702/pw_sys_io/: BUILD.gn  sys_io_bl702.cc
integrations/docker/images/chip-build-bl602/: Dockerfile
scripts/examples/: gn_bl602_example.sh  gn_bl702_example.sh
scripts/flashing/: bl702_firmware_utils.py
src/app/clusters/color-control-server/: color-control-server.cpp
src/inet/: UDPEndPoint.cpp
src/lib/shell/: BUILD.gn
src/lwip/: BUILD.gn
src/lwip/bl702/: lwipopts.h
src/platform/: BUILD.gn  device.gni
src/platform/OpenThread/: GenericThreadStackManagerImpl_OpenThread.cpp
src/platform/bouffalolab/BL602/: BUILD.gn  CHIPPlatformConfig.h  ConnectivityManagerImpl.cpp  DiagnosticDataProviderImpl.cpp  DnssdImpl.cpp  Logging.cpp  NetworkCommissioningDriver.cpp  OTAImageProcessorImpl.cpp  PlatformManagerImpl.cpp
src/platform/bouffalolab/BL702/: BLEManagerImpl.cpp  BLEManagerImpl.h  BUILD.gn  CHIPDevicePlatformConfig.h  CHIPPlatformConfig.h  CHIPmemory.cpp  ConfigurationManagerImpl.cpp  ConfigurationManagerImpl.h  ConnectivityManagerImpl.cpp  ConnectivityManagerImpl.h  DiagnosticDataProviderImpl.cpp  KeyValueStoreManagerImpl.cpp  Logging.cpp  OTAImageProcessorImpl.cpp  PlatformManagerImpl.cpp  PlatformManagerImpl.h  SystemTimeSupport.cpp  ThreadStackManagerImpl.cpp  ThreadStackManagerImpl.h  args.gni  bl702-openthread-core-bl-config.h  bl702-openthread-core-config.h  bl702Config.cpp  bl702Config.h
